# Curator

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .rayignore  1  ADV_dependencies.sh  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURATOR_BRANCH_COMPARISON.md  Dockerfile  GRANARY_V2_PIPELINE_EXPLAINED.md  LICENSE  Makefile  PR1967_FEATURE_WALKTHROUGH.md  README.md  api-design.md  llms.txt  pyproject.toml  requirements-docs.txt  requirements.txt  run_alm_full.sh  test_stage_naming.py
.cursor/rules/: coding-standards.mdc  composite-stage-patterns.mdc  executors.mdc  modality-structure.mdc  processing-stage-patterns.mdc  resources-configuration.mdc
.cursor/skills/: README.md
.dori/: .gitignore  README.md  REGISTRY.json  config.yaml  context.json  dori.yaml  file_history.json
.github/: CODEOWNERS  copilot-instructions.md  copy-pr-bot.yaml
.github/scripts/: audit_overrides.py  check_gpu_test_coverage.py
.github/workflows/: _update_dependencies.yml  audit-overrides.yml  auto-labler.yml  build-docs.yml  build-test-publish-wheel.yml  cicd-main.yml  code-linting.yml  dependabot.yml  docs-fern.yml  fern-docs-ci.yml  fern-docs-preview-comment.yml  fern-docs-preview.yml  gpuci.yml  install-test.yml  (+9 more)
.venv-docs/: pyvenv.cfg
benchmarking/: AGENTS.md  ALM_BENCHMARK.md  AUDIO_PROFILING.md  Dockerfile  README.md  audio-readspeech-benchmark.yaml  ci-h100-overrides.yaml  commands.sh  config.yaml  container_config_.yaml  dummy-config.yaml  example3_production_config.yaml  local-embedding-endpoint.yaml  multi_benchmark_config.yaml  nightly-benchmark.yaml  paths.yaml  run.py  run_.py  simple_config.yaml  test-paths.yaml
config/: example_pipeline.yaml  run.py  translation_config.yaml
docker/: Dockerfile  Dockerfile_inference
docs/: README.md  RFC-FERN-MIGRATION.md  broken_links_false_positives.json  ci-improvements-design.md  conf.py  index.md  links_needing_review.json  resumability.md  versions1.json
example-skill-gen/: README.md  detect_environment_enhanced.py  generate_sample_data.py  run_pipeline.py  text_quick_pass.yaml  text_quick_pass_test.yaml
examples/: README.md  custom_pii_and_deidentify.py  datasets_translation.ipynb  filename_provider_demo.py  per_stage_transformers_versions.py  translation.py
experimental/: .gitignore
experimental/latex-augment/: .gitignore  Dockerfile  README.md  pyproject.toml
experimental/latex-augment/scripts/: setup_tritonserver.sh
experimental/latex-augment/scripts/arxiv/: README.md  batch_augment.py  batch_partition.py  batch_prepare.py  batch_translate.py
experimental/latex-augment/scripts/randomocr/: README.md  gen_randomocr_pdf.py  gen_randomocr_wds.py  webster.sh
experimental/latex-augment/scripts/wikipedia/: README.md  extract_doclaynet.js  sample_pages.py  shuffle_wds.py  wikidump.py  wikipedia.css
experimental/latex-augment/src/latex_augment/: __init__.py  __main__.py  color.py  fonts.py  functional.py  latex_characters.py  latex_compiler.py  latex_parser.py  latex_symbols.py  latex_translator.py  mbart_heuristics.py  mbart_translator.py  randomocr.py  sentences.py  transforms.py  triton_translator.py
experimental/latex-augment/src/latex_augment/convert/: html2markdown.py  markdown.py
experimental/latex-augment/test/: conftest.py  test_functional.py  test_html2markdown.py  test_include.py  test_latex_parser.py  test_latex_translator.py  test_markdown.py  test_mbart_translator.py  test_sentences.py  test_transforms.py
experimental/latex-augment/test/testdata/: commands.tex  environments.tex  figures.tex  lists.tex  math.tex  preamble.tex  sections.tex  tables.tex  text.tex
fern/: AGENTS.md  AUTODOCS_GUIDE.md  README.md  _fix_broken_links.py  docs.yml  fern.config.json  package.json  substitute_variables.py
nemo_curator/: AGENTS.md  __init__.py  config.py  package_info.py
nightly_benchmarking/: common_crawl_benchmark.py
poc_image_download/: README.md  image_download_pipeline_feasibility.md
ray-curator/: CONTRIBUTING.md  Dockerfile  pyproject.toml
scripts/: build_phoneme_vocab.py  measure_realtime.py  run_eos_bs32.sh  run_eos_grafana.sh  run_tts_cascade_ytc_ru.sh  run_tts_full_ytc_ru.sh  ytc_ru.yaml
slurm/: submit_verify.sh  verify_slurm.py
tests/: AGENTS.md  L0_Unit_Test_CPU.sh  L0_Unit_Test_GPU.sh  conftest.py  gpu_test_groups.json  test_custom_pii_and_deidentify.py  test_datachef.py  test_download.py
tokenizer-test/: compare-tokenization-pipelines.sh  preprocess_data_curator.py  test.sh
tutorials/: AGENTS.md  README.md  datachef_math_recipe.py  quickstart.py  quickstart_dask.py  requirements_dask.txt
tutorials/multimodal/omni-fuse-data-curation/: .env.example  .rayignore  0_validate_inputs.py  1_sns.py  2_embed.py  3_project.py  4_datablend.py  README.md  e2e.sh  pyproject.toml  utils.py
tutorials/multimodal/omni-fuse-data-curation/configs/: e2e_multimodal_hybrid_real.yaml  omni_fuse_hybrid.yaml
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/: __init__.py  pipeline.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/compat/: __init__.py  curator.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/config/: __init__.py  loader.py  models.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/data/: __init__.py  io.py  loader.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/datablend/: __init__.py  ranker.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/eee/: __init__.py  backends.py  languagebind_runtime.py  local_models.py  results.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/projection/: __init__.py  trainer.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/sns/: __init__.py  backends.py  full_forward.py  processor.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/sns/model_utils/: __init__.py  grounding_dino.py
tutorials/multimodal/omni-fuse-data-curation/omnifuse_tutorial/stages/: __init__.py  datablend.py  eee.py  projection.py  reader.py  sns.py
(+3004 files in other folders)
