# Copyright (c) 2025, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "nemo_curator",
    "nemo_curator.*",
]

[tool.setuptools.package-data]
"nemo_curator.stages.text.experimental.translation" = ["prompts/*.yaml"]

[tool.setuptools.dynamic]
version = { attr = "nemo_curator.package_info.__version__" }

[project]
name = "nemo-curator"
dynamic = ["version"]
authors = [
    { name = "Ayush Dattagupta", email = "adattagupta@nvidia.com" },
    { name = "Abhinav Garg", email = "abhgarg@nvidia.com" },
    { name = "Praateek Mahajan", email = "praateekm@nvidia.com" },
    { name = "Sarah Yurick", email = "syurick@nvidia.com" },
    { name = "Vibhu Jawa", email = "vjawa@nvidia.com" },
]
description = "Scalable Data Preprocessing Tool for Training Large Language Models"
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "absl-py>=2.0.0,<3.0.0",
    "comment_parser",
    "cosmos-xenna==0.2.0",
    "fsspec",
    "hydra-core",
    "jieba==0.42.1",
    "loguru",
    "mecab-python3",
    "omegaconf",
    "openai>=1.0.0",
    "pandas>=2.1.0",
    "pyarrow",
    "ray[default,data] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp313-cp313-manylinux2014_x86_64.whl ; python_version == '3.13' and platform_machine == 'x86_64' and platform_system != 'Darwin'",
    "torch",
    "transformers",
]

[project.optional-dependencies]
cuda12 = [
    "gpustat",
    "nvidia-ml-py",
]
vllm = ["vllm[flashinfer,runai,otel]==0.22.0+cu129; (platform_machine == 'x86_64' and platform_system != 'Darwin')"]

# Inference Server (Ray Serve + vLLM) - for serving LLMs alongside Curator pipelines
inference_server = [
    "nemo_curator[cuda12]",
    "nemo_curator[vllm]",
    "ai-dynamo>=1.3.0.dev0; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
    "boto3>=1.35", # Get rid once https://github.com/ray-project/ray/issues/61269 is fixed
    "nixl-cu12>=0.10.0; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
    "ray[serve,llm]>=2.55.1",
]

# Installs CPU + GPU text curation modules
# RAPIDS pinned to the nightly dev line (26.08.0a*) from the rapids-nightly index
# (see [[tool.uv.index]] + [tool.uv.sources]) so the weekly benchmark exercises
# upstream cudf/cuml/cugraph as they land. The >=…a0 floor is an explicit
# prerelease marker, which prerelease="if-necessary-or-explicit" honors.
deduplication_cuda12 = [
    # Top-level RAPIDS packages
    "cudf-cu12>=26.8.0a0,<26.10",
    "cuml-cu12>=26.8.0a0,<26.10",
    "pylibcugraph-cu12>=26.8.0a0,<26.10",
    "pylibraft-cu12>=26.8.0a0,<26.10",
    "raft-dask-cu12>=26.8.0a0,<26.10",
    "rapidsmpf-cu12>=26.8.0a0,<26.10",
    # rapidsmpf 26.08 moved partition_and_pack/unpack_and_concat out of rapidsmpf into the
    # new cudf-streaming package; the dedup shuffler now depends on it directly.
    "cudf-streaming-cu12>=26.8.0a0,<26.10",
    # RAPIDS nightly transitives, listed EXPLICITLY so prerelease="if-necessary-or-explicit"
    # enables prereleases for them (stable <26.8 builds also exist on the nvidia index, so
    # they would NOT qualify as "if-necessary"). Enumerated from a resolved uv.lock; keep in
    # sync when the RAPIDS line bumps (re-run: parse uv.lock for the rapids-nightly index).
    "libcudf-cu12>=26.8.0a0,<26.10",
    "pylibcudf-cu12>=26.8.0a0,<26.10",
    "rmm-cu12>=26.8.0a0,<26.10",
    "librmm-cu12>=26.8.0a0,<26.10",
    "libcuml-cu12>=26.8.0a0,<26.10",
    "libcugraph-cu12>=26.8.0a0,<26.10",
    "libraft-cu12>=26.8.0a0,<26.10",
    "libcuvs-cu12>=26.8.0a0,<26.10",
    "libkvikio-cu12>=26.8.0a0,<26.10",
    "libnvforest-cu12>=26.8.0a0,<26.10",
    "nvforest-cu12>=26.8.0a0,<26.10",
    "librapidsmpf-cu12>=26.8.0a0,<26.10",
    "libcudf-streaming-cu12>=26.8.0a0,<26.10",
    "dask-cuda>=26.8.0a0,<26.10",
    "rapids-dask-dependency>=26.8.0a0,<26.10",
    # UCXX stack (RAPIDS comms) — separate 0.5x version line
    "ucxx-cu12>=0.51.0a0,<0.52",
    "libucxx-cu12>=0.51.0a0,<0.52",
    "distributed-ucxx-cu12>=0.51.0a0,<0.52",
]

audio_common = [
    # ASR/diarization stack pulls x86_64-only transitives (kaldialign cp313, torchcodec) — gate to x86_64 Linux
    "nemo_toolkit[asr]>=2.7.2; platform_machine == 'x86_64' and platform_system != 'Darwin'",
    "soundfile>=0.12.0",
    "torchaudio",
    "onnx>=1.19.0",
    "silero-vad",
    "librosa",
    "scipy",
    "pydub>=0.25.1",
    "transformers",
    "accelerate",
    "nemo_text_processing; platform_machine == 'x86_64' and platform_system != 'Darwin'",  # pulls pynini, which ships x86_64-only wheels and fails to build on aarch64
    "opencc-python-reimplemented",
    "pyannote-audio>=4.0.0; platform_machine == 'x86_64' and platform_system != 'Darwin'",
    "whisperx>=3.8.4; platform_machine == 'x86_64' and platform_system != 'Darwin'",
]
audio_cpu = [
    "nemo_curator[audio_common]",
    "onnxruntime>=1.20.1,<1.24",
]

audio_cuda12 = [
    "cuda-python>=12.3",
    "nemo_curator[audio_common]",
    "nemo_curator[cuda12]",
    "nvidia-cudnn-cu12",
    "onnxruntime-gpu>=1.20.1,<1.24; platform_machine == 'x86_64'",
    "torchcodec; platform_machine == 'x86_64' and platform_system != 'Darwin'",
]

image_cpu = [
    "Pillow",
    "torchvision"
]

# NVIDIA DALI (simplified; update the package to match your CUDA version if needed)
image_cuda12 = [
    "nemo_curator[image_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[deduplication_cuda12]",
    "nvidia-dali-cuda120",
]

# Translation Dependencies
translation_common = [
    "iso639-lang>=2.6.0",
]

translation_metrics = [
    "nemo_curator[translation_common]",
    "sacrebleu>=2.6.0",
]

translation_segmentation = [
    "nemo_curator[translation_common]",
    "spacy>=3.8",
]

translation_aws = [
    "nemo_curator[translation_common]",
    "boto3>=1.35",
]

translation_google = [
    "nemo_curator[translation_common]",
    "google-cloud-translate",
]

translation_nmt = [
    "nemo_curator[translation_common]",
    "aiohttp>=3.13.3",
    "requests",
]

translation_all = [
    "nemo_curator[translation_metrics]",
    "nemo_curator[translation_segmentation]",
    "nemo_curator[translation_aws]",
    "nemo_curator[translation_google]",
    "nemo_curator[translation_nmt]",
]

# Text Curation Dependencies
text_cpu = [
    # Download / Extract
    "beautifulsoup4",
    "justext",
    "lxml",
    "pycld2",
    "resiliparse",
    "s5cmd",
    "trafilatura==2.0.0",
    "warcio",
    # Filters
    "fasttext==0.9.3",
    "sentencepiece",
    "mwparserfromhell==0.6.5",
    # Aegis
    "peft",
    # Modifiers
    "ftfy",
    # Embedders
    "sentence-transformers",
]

text_cuda12 = [
    "nemo_curator[cuda12]",
    "nemo_curator[deduplication_cuda12]",
    "nemo_curator[text_cpu]",
    "nemo_curator[vllm]",
]

# Video Curation Dependencies
video_cpu = [
    "av==13.1.0",
    "opencv-python",
    "torchvision",
    "einops",
    "easydict",
]

video_cuda12 = [
    "nemo_curator[video_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[vllm]",
    "cvcuda_cu12",
    "flash-attn<=2.8.3; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
    "pycuda",
    "PyNvVideoCodec==2.0.2; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
    "torch<=2.11.0",
    "torchaudio",
]

# Math Curation Dependencies
math_cpu = [
    "nemo_curator[text_cpu]",  # Math examples use text processing utilities
    "boto3>=1.35",  # S3 range requests for Common Crawl WARC fetching
]

math_cuda12 = [
    "nemo_curator[math_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[deduplication_cuda12]",
    "vllm>=0.13; (platform_machine == 'x86_64' and platform_system != 'Darwin')",
]

# Multimodal / Interleaved Dependencies
interleaved_cpu = [
    "albumentations",
    "matplotlib",
    "open_clip_torch",
    "opencv-python",
    "Pillow",
    "pypdfium2",
    "s3fs>=2024.12.0",
    "timm",
]

interleaved_cuda12 = [
    "nemo_curator[interleaved_cpu]",
    "nemo_curator[cuda12]",
    "nemo_curator[vllm]",
]

# Synthetic Data Generation (SDG) Dependencies
sdg_cpu = [
    "data-designer==0.6.1",
]

sdg_cuda12 = [
    "nemo_curator[cuda12]",
    "nemo_curator[sdg_cpu]",
    "nemo_curator[inference_server]",
]

# All dependencies
all = [
    "nemo_curator[audio_cuda12]",
    "nemo_curator[image_cuda12]",
    "nemo_curator[inference_server]",
    "nemo_curator[interleaved_cuda12]",
    "nemo_curator[math_cuda12]",
    "nemo_curator[sdg_cuda12]",
    "nemo_curator[text_cuda12]",
    "nemo_curator[translation_all]",
    "nemo_curator[video_cuda12]",
]

[dependency-groups]
build = ["setuptools", "torch<=2.11.0", "Cython", "packaging"]
dev = ["jupyter"]
linting = ["pre-commit", "ruff==0.14.10"]
test = [
    "coverage",
    "debugpy",
    "GitPython",
    "oauth2client",
    "pydrive2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpserver",
    "pytest-loguru",
    "pyyaml",
    "rich",
    "scikit-learn",  # cap lifted for RAPIDS nightly (cuml 25.10's <1.8.0 incompatibility no longer applies); re-cap if the lock surfaces it
    "s3fs>=2024.12.0", # added for testing cloud fs
    "slack_sdk",
]

[tool.uv]
required-version = ">=0.7.0"
package = true
managed = true
default-groups = ["dev", "test"]
index-strategy = "unsafe-best-match"
# Only pick a prerelease when a requirement carries an explicit prerelease marker
# (ai-dynamo>=1.3.0.dev0, ray nightly URL, and the RAPIDS nightly tree listed
# explicitly in deduplication_cuda12) or when every version in range is a
# prerelease (otel's 0.x betas). This deliberately avoids "allow", which would
# also drag in unrelated prereleases (e.g. azure-identity betas, msal rc).
prerelease = "if-necessary-or-explicit"
no-build-isolation-package = ["flash-attn"]
# CVE floors removed as proven-redundant (2026-06): with the ray-nightly /
# ai-dynamo-nightly / transformers-5 / RAPIDS-nightly stack, the resolver already
# lands at or above every prior CVE fix without an explicit floor — verified by
# locking with this list empty and comparing resolved versions:
#   aiohttp 3.14.0 (≥3.13.3), cryptography 46.0.7 (≥46.0.6), nbconvert 7.17.1
#   (≥7.17.0), pillow 12.2.0 (≥12.1.1), pyasn1 0.6.3 (≥0.6.2), pyopenssl 26.0.0,
#   python-multipart 0.0.32 (≥0.0.22), starlette 1.0.1 (≥0.49.1), urllib3 2.7.0
#   (≥2.6.3), wheel 0.46.3 (≥0.46.2), setuptools 80.10.2 (≥80.10.1).
# If a weekly re-lock ever drops one below its fix, re-add just that floor here.
constraint-dependencies = [
]
override-dependencies = [
    "fsspec>=2025.3.0", # required because nemo-toolkit[asr] pins fsspec==2024.12.0 while data-designer-engine==0.6.1 requires fsspec>=2025.3.0,<2026
    "huggingface-hub>=1.5.0,<2", # Override whisperx's huggingface-hub<1.0.0 pin (and other audio transitives); transformers 5 needs >=1.5,<2 and data-designer-engine 0.6.1 needs >=1.0.1,<2 — intersection is >=1.5,<2. Audio stack on hub 1.x is a known canary risk.
    "apex; sys_platform == 'never'",
    "distance; sys_platform == 'never'",
    "kaldiio;  sys_platform == 'never'",
    "levenshtein;  sys_platform == 'never'",
    "numpy>=2.0.0", # Override nemo-toolkit's <2.0.0 cap; upper bound dropped (numba 0.65 + cudf nightly govern the real ceiling) — let the resolver pick the newest compatible numpy
    "packaging>=25", # Override lightning 2.4.0's packaging<25 cap (lightning is pinned to 2.4.0 by nemo-toolkit[asr]<=2.4.0 ∩ pyannote-audio>=2.4); data-designer 0.6.1 requires packaging>=25. packaging 25 is low-risk for lightning.
    "pandas>=3.0.0", # cudf-cu12 nightly (26.08) requires pandas>=3.0.0, but data-designer-config 0.6.1 (and nemo-toolkit transitives) still cap pandas<3. Force pandas 3 so the nightly RAPIDS line wins; data-designer on pandas 3 is a known canary risk surfaced by the weekly run.
    "numba==0.65.0", # Override RAPIDS/legacy caps for the inference image; vLLM 0.22 requires numba 0.65.0
    "protobuf>=5.29.6",  # Override nemo-toolkit's ~=5.29.5 pin; floor at 5.29.6 for CVE GHSA-8qvm-5x2c-j2w7. <7.0 cap dropped — ray nightly should handle protobuf 6/7; weekly run will catch the FieldDescriptor break if it regresses
    "transformers>=5.0,<6", # Override nemo-toolkit[asr]'s transformers>=4.57,<4.58 pin to force the transformers 5.x nightly bump; audio stack on transformers 5 is a known canary risk (prior runs passed with the pin overridden)
    "torch==2.11.0; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')", # Match vLLM's CUDA requirements; Linux resolves to cu129 via tool.uv.sources
    "torchaudio==2.11.0; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')", # Match torch==2.11.0
    "torchvision==0.26.0; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')", # Match torch==2.11.0
    "torchcodec~=0.11.0; platform_machine == 'x86_64' and platform_system != 'Darwin'", # pin to torchcodec 0.11.x for torch 2.11 ABI compatibility; torchcodec does not declare a torch dep, so the resolver cannot enforce the match; satisfies pyannote-audio's >=0.7.0 floor; x86_64-only since aarch64 lacks wheels
    "nixl-cu12>=0.10.0; (platform_machine == 'x86_64' and platform_system != 'Darwin')",  # Override ray[llm]'s unconditional nixl dep for ARM
    "nixl-cu13; sys_platform == 'never'", # ray[llm]/nixl hard-pin the CUDA-13 NIXL backend. On this CUDA-12.9 image vLLM's eager `import nixl_ep` would load cu13's nixl_ep_cpp.so and dlopen the absent libcudart.so.13. Drop it; the nixl meta + nixl-cu12 backend (nixl's own default) remain.
    "xgrammar>=0.1.32", # Override vllm's ==0.1.29 pin to address CVE GHSA-7rgv-gqhr-fxg3 (DoS via multi-layer nesting)
]


[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "vllm-cu129"
url = "https://wheels.vllm.ai/0.22.0/cu129"
explicit = true

# RAPIDS nightly wheels (cudf/cuml/cugraph/raft + their lib*/rmm transitives).
# Non-explicit so the unsafe-best-match resolver can also pull the nightly-only
# transitives (librmm-cu12==26.8.*, pylibcudf-cu12, libcuml-cu12, libkvikio-cu12,
# …); prerelease="if-necessary-or-explicit" keeps it from leaking prereleases to
# unrelated packages.
[[tool.uv.index]]
name = "rapids-nightly"
url = "https://pypi.anaconda.org/rapidsai-wheels-nightly/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')" },
    { index = "pypi", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and platform_machine != 'aarch64')" },
]
torchaudio = [
    { index = "pytorch", marker = "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')" },
    { index = "pypi", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and platform_machine != 'aarch64')" },
]
torchvision = [
    { index = "pytorch", marker = "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')" },
    { index = "pypi", marker = "sys_platform == 'darwin' or (platform_machine != 'x86_64' and platform_machine != 'aarch64')" },
]
torchcodec = [
    { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pypi", marker = "platform_machine != 'x86_64' or sys_platform == 'darwin'" },
]
ai-dynamo = { index = "nvidia" }
ai-dynamo-runtime = { index = "nvidia" }
vllm = [
    { index = "vllm-cu129", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pypi", marker = "platform_machine != 'x86_64' or sys_platform == 'darwin'" },
]
nixl = { index = "pypi" }
nixl-cu12 = { index = "pypi" }
# Pin the top-level RAPIDS packages to the nightly index for determinism; their
# lib*/rmm transitives resolve from the same (non-explicit) index automatically.
cudf-cu12 = { index = "rapids-nightly" }
cuml-cu12 = { index = "rapids-nightly" }
pylibcugraph-cu12 = { index = "rapids-nightly" }
pylibraft-cu12 = { index = "rapids-nightly" }
raft-dask-cu12 = { index = "rapids-nightly" }
rapidsmpf-cu12 = { index = "rapids-nightly" }

[tool.coverage.paths]
source = ["nemo_curator", "/opt/Curator/nemo_curator", "/home/runner/work/Curator/Curator/nemo_curator"]

[tool.ruff]
line-length = 119
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # pydocstyle
    "PTH",  # use pathlib
    "G",  # no enforcement during logging
    "FBT",  # allow booleans in function / class arguments
    "T20",  # allow printing
    "E501",  # allow line length violations, leave it to Black
    "ANN002",  # don't annotate **args
    "ANN003",  # don't annotate **kwargs
    "ANN204",  # don't annotate self/cls/special methods (__new__)
    "PT013",  # how to import pytest
    "PERF401",  # don't enforce list comprehension
    "RET505", "RET506", "RET507", "RET508",  # allow branching (if else after return)
    "PGH004",  # allow generic noqa

    "TD002",  # allow TODO without author
    "TD003",  # allow TODO without link
    "TRY003", # allow long exception messages rather than creating a new exception class
    "FIX002",  # allow TODO to exist,
    "EXE002", # don't require for a shebang to be present if it's executable
    "COM812", # disable the trailing comma in linter, because ruff formatter ensures it
    "SLF001", # allow accessing private attributes
    "PLC0415", # allow imports inside functions (lazy imports for optional/heavy deps)
]
fixable = ["ALL"]


[tool.ruff.lint.extend-per-file-ignores]
"nemo_curator/__init__.py" = ["F401"]
"examples/**" = [
    "INP001", # no __init__.py is required
]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ANN201", # allow methods to not return something
    "ARG002", # allow unused method args (mock.patch decorator injects args not always referenced)
    "PLR2004", # magic value used in comparison
    "ERA001", # allow commented-out code
]
"benchmarking/**" = [
    "BLE001", # allow catching blind exceptions (benchmark runners need catch-all error handling)
]
"docs/**" = [
    "BLE001", # allow catching blind exceptions (Sphinx extensions need robust error handling)
]
"tutorials/**" = [
    "INP001", # no __init__.py is required
    "PLE2515", # ignore \u200b complaint
]
"fern/**/*.py" = [
    "INP001", # Fern CLI helper scripts; not an installable package
]
".github/scripts/**" = [
    "INP001", # CI scripts; not an installable package
]
".claude/skills/**/scripts/**" = [
    "INP001", # skill verification scripts; not an installable package
    "F401",   # imports are intentionally present to verify modules load
    "EXE001", # invoked via `python3 verify_*.py`; shebang is informational
    "ANN001", # type annotations not required for one-shot verification scripts
    "ANN201", # type annotations not required for one-shot verification scripts
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "asyncio",
    "gpu: marks tests as GPU tests (deselect with '-m \"not gpu\"')",
]

[tool.check-manifest]
ignore = [
  "*.md",
  "*.cff",
  "*.lock",
  "*.txt",
  "*.yml",
  "*.yaml",
  "*.json",
  "*.toml",
  "*.sh",
  "*.cfg",
  "Makefile",
  "Dockerfile",
  "MAINTAINERS",
  "CODEOWNERS",
  ".gitattributes",
  ".gitmodules",
  ".markdownlint.json",
  ".secrets.baseline",
  ".pre-commit-config.yaml",
  "api-design.md",
  ".claude/**",
  ".cursor/**",
  ".github/**",
  "benchmarking/**",
  "docker/**",
  "docs/**",
  "examples/**",
  "fern/**",
  "image/**",
  "scripts/**",
  "tests/**",
  "tutorials/**",
  "**/conftest.py",
  "**/test_*.py",
  "**/*.bat",
  "**/.gitkeep",
]
